07-k8s-setup/k8s-helm/web/manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: roboshop
  labels: 
    app: web
    project: roboshop
    tier: web
spec:
  replicas: 1
  selector:
    matchLabels: 
      app: web
      project: roboshop
      tier: web
  template:
    metadata:
      labels: 
        app: web
        project: roboshop
        tier: web
    spec:
      containers:
      - name: web
        image: daliparthy/web:v1
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "50m"
            memory: "64Mi"
          limits:
            cpu: "100m"
            memory: "128Mi"
        volumeMounts:
        - name: nginx-conf
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
          readOnly: true
      volumes:
      - name: nginx-conf
        configMap:
          name: web
          items:
            - key: nginx.conf
              path: nginx.conf
---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: roboshop
spec:
  type: LoadBalancer
  selector:
    app: web
    project: roboshop
    tier: web
  ports:
  - protocol: TCP
    port: 80 
    targetPort: 80 
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
  namespace: roboshop
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/tags: Environment=dev,Team=test,Project=Roboshop
    alb.ingress.kubernetes.io/group.name: roboshop
spec:
  ingressClassName: alb
  rules:
  - host: "roboshop.myroboshop.online"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: web
            port:
              number: 80
